<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />


    <EditText
        android:id="@+id/edit_distance"
        android:inputType="numberDecimal"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/edit_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/totalKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalKm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_distance" />

    <EditText
        android:id="@+id/edit_Price"
        android:inputType="numberDecimal"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/edit_Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalKm" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Price" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:inputType="numberDecimal"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:hint="@string/edit_autonomy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_price" />

    <TextView
        android:id="@+id/value_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_autonomy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_autonomy" />

    <TextView
        android:id="@+id/text_consumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_consumed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/value_autonomy"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-black"
        />


    <TextView
        android:id="@+id/label_calculated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/label_calculated"
        android:textAllCaps="true"
        android:textColor="@color/redBlur"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_consumed" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_calculate"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>